@@ -2,27 +2,26 @@ package com.sky.getyourway.services;
 
 import com.duffel.DuffelApiClient;
 import com.fasterxml.jackson.databind.JsonNode;
-import org.springframework.beans.factory.annotation.Autowired;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class OrderService {
 
-    private DuffelApiClient client;
+    private final DuffelApiClient client;
+    @Value("${api.key}")
+    private String apiKey;  // api.key environment variable
 
     // Constructor injecting the Duffle client
     public OrderService(DuffelApiClient client) {
         this.client = client;
     }
-
-    @Value("${api.key}")
-    private String apiKey;  // api.key environment variable
-
 
     // Service created to make the requests to GET info from a placed/paid booking/order
     // Used within the SearchController viewBooking() method
@@ -34,7 +33,7 @@ public class OrderService {
         headers.set("Authorization", "Bearer " + apiKey); // Example header, replace with your actual header
         headers.set("Duffel-Version", "v1");
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
 
         /* HEADERS:
         Accept-Encoding:gzip
